--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Handler\CompletedHandler.cs" />
     <Compile Include="Handler\ValidationHandler.cs" />
     <Compile Include="Header.cs" />
+    <Compile Include="IRequest.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
