--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Exception\ParseException.cs" />
     <Compile Include="Extension\HttpWebRequestExtension.cs" />
+    <Compile Include="Extension\RequestPriorityExtension.cs" />
     <Compile Include="Handler\CompletedHandler.cs" />
     <Compile Include="Handler\ValidationHandler.cs" />
     <Compile Include="Header.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Parameter.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestPriority.cs" />
     <Compile Include="RequestQueue.cs" />
     <Compile Include="Resources\Strings.Designer.cs">
       <AutoGen>True</AutoGen>
