--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -5,7 +5,7 @@
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3abe91de-c68d-43b8-b60b-52406a5b6682}</ProjectGuid>
+    <ProjectGuid>{3ABE91DE-C68D-43B8-B60B-52406A5B6682}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RequestWithLaz0rz</RootNamespace>
@@ -34,10 +34,46 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <EmbeddedResource Include="Resources\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Exception\ParseException.cs" />
+    <Compile Include="Extension\HttpWebRequestExtension.cs" />
+    <Compile Include="Extension\RequestPriorityExtension.cs" />
+    <Compile Include="Handler\CompletedHandler.cs" />
+    <Compile Include="Handler\ValidationHandler.cs" />
+    <Compile Include="Header.cs" />
+    <Compile Include="IRequest.cs" />
+    <Compile Include="Parameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="RequestPriority.cs" />
+    <Compile Include="RequestQueue.cs" />
+    <Compile Include="Resources\Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Serializer\ISerializer.cs" />
+    <Compile Include="Serializer\JsonSerializer.cs" />
+    <Compile Include="Serializer\TextSerializer.cs" />
+    <Compile Include="Serializer\XmlSerializer.cs" />
+    <Compile Include="Type\ContentType.cs" />
+    <Compile Include="Type\HttpMethod.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="C5">
+      <HintPath>..\..\Ampya\packages\C5.2.2.5073.27396\lib\portable-net40+sl50+wp80+win\C5.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Ampya\packages\Newtonsoft.Json.5.0.8\lib\portable-net45+wp80+win8\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -47,5 +83,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
 </Project>
