--- a/Jamendo/Jamendo.csproj
+++ b/Jamendo/Jamendo.csproj
@@ -98,10 +98,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\BaseRequest.cs" />
     <Compile Include="Request\Model\BaseRequestModel.cs" />
     <Compile Include="Request\Model\TrackRequestModel.cs" />
-    <Compile Include="Request\TrackRequest2.cs" />
-    <Compile Include="Request\TrackRequest.cs" />
+    <Compile Include="Request\ArtistsTracksRequest.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
