--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exception\ParseException.cs" />
-    <Compile Include="Extension\HttpWebRequestExtension.cs" />
+    <Compile Include="Extension\HttpClientExtensions.cs" />
     <Compile Include="Extension\RequestPriorityExtension.cs" />
     <Compile Include="Handler\CompletedHandler.cs" />
     <Compile Include="Handler\ValidationHandler.cs" />
