--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -38,6 +38,7 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\PriorityQueue.cs" />
     <Compile Include="Data\RequestQueue.cs" />
     <Compile Include="Exception\ParseException.cs" />
     <Compile Include="Extension\HttpClientExtensions.cs" />
@@ -45,7 +46,7 @@
     <Compile Include="Handler\CompletedHandler.cs" />
     <Compile Include="Handler\ValidationHandler.cs" />
     <Compile Include="IRequest.cs" />
-    <Compile Include="Parameter.cs" />
+    <Compile Include="KeyValuePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestPriority.cs" />
