--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Extension\RequestPriorityExtension.cs" />
     <Compile Include="Handler\CompletedHandler.cs" />
     <Compile Include="Handler\ValidationHandler.cs" />
-    <Compile Include="IRequest.cs" />
+    <Compile Include="IPriorityRequest.cs" />
     <Compile Include="KeyValuePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
