--- a/RequestWithLaz0rzTest/RequestWithLaz0rzTest.csproj
+++ b/RequestWithLaz0rzTest/RequestWithLaz0rzTest.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="PriorityQueueTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestQueueTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
