--- a/RequestWithLaz0rzTest/RequestWithLaz0rzTest.csproj
+++ b/RequestWithLaz0rzTest/RequestWithLaz0rzTest.csproj
@@ -113,6 +113,8 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mock\PriorityQueueItemMock.cs" />
+    <Compile Include="Mock\RequestMock.cs" />
     <Compile Include="PriorityQueueTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestQueueTest.cs" />
