--- a/RequestWithLaz0rz/RequestWithLaz0rz.csproj
+++ b/RequestWithLaz0rz/RequestWithLaz0rz.csproj
@@ -40,17 +40,17 @@
   <ItemGroup>
     <Compile Include="Data\PriorityQueue.cs" />
     <Compile Include="Data\RequestQueue.cs" />
+    <Compile Include="Data\IValidationTask.cs" />
     <Compile Include="Exception\HttpMethodNotSupportedException.cs" />
     <Compile Include="Exception\ParseException.cs" />
     <Compile Include="Extension\HttpClientExtensions.cs" />
     <Compile Include="Extension\RequestPriorityExtension.cs" />
-    <Compile Include="Handler\CompletedHandler.cs" />
-    <Compile Include="Handler\ValidationHandler.cs" />
-    <Compile Include="IRequest.cs" />
-    <Compile Include="KeyValuePair.cs" />
+    <Compile Include="Data\Response.cs" />
+    <Compile Include="Data\IRequest.cs" />
+    <Compile Include="Data\KeyValuePair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
-    <Compile Include="RequestPriority.cs" />
+    <Compile Include="Type\RequestPriority.cs" />
     <Compile Include="Serializer\ISerializer.cs" />
     <Compile Include="Serializer\JsonSerializer.cs" />
     <Compile Include="Serializer\TextSerializer.cs" />
